# netfusion

./: Cargo.toml  README.md  netfusion_plan.md
crates/netfusion-core/: Cargo.toml
crates/netfusion-core/src/: error.rs  health.rs  lib.rs  monitoring.rs
crates/netfusion-core/src/bonding/: failover.rs  manager.rs  mod.rs
crates/netfusion-core/src/discovery/: metadata.rs  mod.rs  scanner.rs  type_detection.rs
crates/netfusion-core/src/intelligence/: adaptive.rs  analytics.rs  mod.rs  predictive.rs
crates/netfusion-core/src/qos/: dscp.rs  mod.rs  qdisc.rs
crates/netfusion-core/src/routing/: engine.rs  mod.rs  path_steering.rs  safe_apply.rs
crates/netfusion-core/src/routing/balancer/: ecmp.rs  mod.rs  nftables.rs  weighted.rs
crates/netfusion-core/src/state/: mod.rs  store.rs
crates/netfusion-core/src/tunnels/: manager.rs  mod.rs  wireguard.rs
crates/netfusion-daemon/: Cargo.toml
crates/netfusion-daemon/src/: config_watcher.rs  lib.rs  main.rs
crates/netfusion-daemon/src/ipc/: client.rs  mod.rs  server.rs
crates/netfusion-relay/: Cargo.toml
crates/netfusion-relay/src/: config.rs  main.rs  server.rs
crates/netfusion-shared/: Cargo.toml
crates/netfusion-shared/src/: config.rs  events.rs  ipc.rs  lib.rs  types.rs
crates/netfusion-tui/: Cargo.toml
crates/netfusion-tui/src/: main.rs
crates/netfusion-tui/src/tui/: app.rs  mod.rs  ui.rs
