[workspace]
members = [
    "crates/netfusion-core",
    "crates/netfusion-shared",
    "crates/netfusion-daemon",
    "crates/netfusion-tui",
    "crates/netfusion-relay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netfusion/netfusion"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking
rtnetlink = "0.14"
ethtool = "0.2"
socket2 = "0.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-logger = "0.14"

# System integration
nix = { version = "0.29", features = ["net", "signal"] }
procfs = "0.17"
sysinfo = "0.33"
zbus = "5.5"

# State persistence
rusqlite = { version = "0.33", features = ["bundled"] }

# QUIC (relay)
quinn = "0.11"
rustls = "0.23"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Bincode for IPC
bincode = "1.3"

# Config file watching
notify = "7.0"
