[package]
name = "netfusion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core networking logic: discovery, routing, bonding, monitoring"

[dependencies]
netfusion-shared = { path = "../netfusion-shared" }

tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true

rtnetlink.workspace = true
ethtool.workspace = true
socket2.workspace = true
nix.workspace = true
procfs.workspace = true
sysinfo.workspace = true
zbus.workspace = true
rusqlite.workspace = true
chrono.workspace = true
metrics.workspace = true
