[package]
name = "netfusion-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NetFusion remote relay server — enables true multi-ISP aggregation"

[[bin]]
name = "netfusion-relay"
path = "src/main.rs"

[dependencies]
netfusion-shared = { path = "../netfusion-shared" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
quinn.workspace = true
rustls.workspace = true
chrono.workspace = true
futures.workspace = true
