[package]
name = "netfusion-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NetFusion terminal user interface"

[[bin]]
name = "netfusion"
path = "src/main.rs"

[dependencies]
netfusion-shared = { path = "../netfusion-shared" }
netfusion-daemon = { path = "../netfusion-daemon" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-logger.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
futures.workspace = true
